<resources>
    <string name="app_name">UniBoard</string>
    <string name="ad_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="ad_inter_id">ca-app-pub-3940256099942544/1033173712</string>
    <!--Menu Drawer Strings-->
    <string name="ad_cat1">Объявления</string>
    <string name="ad_my_ads">Мои объявления</string>
    <string name="ad_my_fav">Избранные</string>
    <string name="def">Главное</string>
    <string name="ad_courses">Курсы</string>
    <string name="ad_tutoring">Репетиторство</string>
    <string name="ad_vacancies">Вакансии</string>
    <string name="ad_ed_mat">Учебные материалы</string>
    <string name="ad_help">Помощь в написании работ</string>
    <string name="ad_internship_practice">Учебная практика</string>


    <string name="ad_cat2">Аккаунт</string>
    <string name="ac_sign_up">Регистрация</string>
    <string name="ac_sign_in">Вход</string>
    <string name="ac_sign_out">Выход</string>

    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="not_reg">Войдите в аккаунт!</string>

    <!--Sign Dialog-->
    <string name="email_hint">Email</string>
    <string name="email_reset_password_was_sent">Reset Email was sent!</string>
    <string name="dialog_reset_email_message">Для восстановления пароля укажите Ваш email</string>
    <string name="password_hint">Password</string>
    <string name="sign_up_action">Зарегистрироваться</string>
    <string name="sign_in_action">Войти</string>
    <string name="forget_password">Забыли пароль?</string>
    <string name="sign_up_error">Не удалось зарегестрироваться</string>
    <string name="sign_in_error">Не удалось войти</string>
    <string name="send_verification_error">Не удалось отправить email на подтверждения</string>
    <string name="send_verification_done">На указанную почту была отправлена ссылка для подтверждения аккаунта, пожалуйста, подтвердите ваш аккаунт!</string>

    <!--Link-->
    <string name="link_done">Email успешно подключен к Google аккаунту</string>
    <string name="enter_to_g">Аккаунт с таким email уже существет, пожалуйста выполните вход</string>

    <!--Edit Activity-->
    <string name="select_faculty">*Выберите факультет</string>
    <string name="select_discipline">*Выберите дисциплину</string>
    <string name="discipline">Дисциплина</string>
    <string name="faculty">Факультет</string>
    <string name="index">Индекс</string>
    <string name="index_hint">*Индекс</string>
    <string name="tel">Телефон</string>
    <string name="tel_number">*Номер телефона</string>
    <string name="image_list_frag">Image List Frag</string>
    <string name="category">Катагория</string>
    <string name="title">Заголовок</string>
    <string name="title_hint">*Название объявления</string>
    <string name="select_category">*Выберите категорию</string>
    <string name="price">Цена</string>
    <string name="price_hint">*Цена</string>
    <string name="description">Описание</string>
    <string name="description_hint">*Описание</string>
    <string name="send">С доставкой</string>
    <string name="publish">Опубликовать</string>



</resources>