<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="@string/ad_cat1">
    <menu>

     <item
         android:title="@string/ad_my_ads"
         android:id="@+id/id_my_ads"
         />
      <item
          android:title="@string/ad_courses"
          android:id="@+id/id_courses"
          />
        <item
            android:title="@string/ad_tutoring"
            android:id="@+id/id_tutoring"
            />
        <item
            android:title="@string/ad_vacancies"
            android:id="@+id/id_vacancies"
            />
        <item
            android:title="@string/ad_ed_mat"
            android:id="@+id/id_ed_mat"
            />
        <item
            android:title="@string/ad_help"
            android:id="@+id/id_help"
            />
        <item
            android:title="@string/ad_internship_practice"
            android:id="@+id/id_internship_practice"
            />



    </menu>
    </item>
    <item android:title="@string/ad_cat2">
        <menu>

            <item
                android:title="@string/ac_sign_up"
                android:id="@+id/id_sign_up"
                />
            <item
                android:title="@string/ac_sign_in"
                android:id="@+id/id_sign_in"
                />
            <item
                android:title="@string/ac_sign_out"
                android:id="@+id/id_sign_out"
                />


        </menu>
    </item>

</menu>